# rawcode-rust

./: .appveyor.yml  Cargo.toml  README.md
derive/: Cargo.toml  README.md
derive/src/: derive.rs
rawcode/: Cargo.toml  README.md
rawcode/src/: error.rs  lib.rs
rawcode/src/coding/: array.rs  boolean.rs  integer.rs  list.rs  mod.rs  strarray.rs  unit.rs
rawcode/tests/: boolean.rs  derive.rs  integer.rs  list.rs
rawcode_derive/: Cargo.toml
rawcode_derive/src/: derive.rs  lib.rs
